apps/infra/k8s/backend/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: farmassistant-api-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/limit-rps: "100"
spec:
  ingressClassName: nginx
  rules:
  - host: api.farming-assistant.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: farmassist
            port:
              number: 80

  tls:
  - hosts:
      - api.farming-assistant.com
    secretName: farmingassistants-api-cert
